# jvm_image

./: BUILD.bazel  MODULE.bazel  go.mod  jvm_image.bzl  jvm_image_layers.bzl
cmd/executable_jar_splitter/: BUILD.bazel  main.go
cmd/jar_layerer/: BUILD.bazel  README.md  main.go
example/hello/: .bazelrc  BUILD.bazel  MODULE.bazel  Main.java
example/java/: BUILD.bazel  MODULE.bazel  Main.java  maven2_install.json
pkg/jarlayer/: BUILD.bazel  jarlayer.go  jarlayer_test.go
pkg/jartar/: BUILD.bazel  jartar.go  jartar_test.go
util/: BUILD.bazel
