module(
    name = "jvm_image",
    version = "0.0.0",
    compatibility_level = 1,
)

# bazel_dep(name = "rules_img", version = "0.3.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.47.0")

# bazel_dep(name = "platforms", version = "0.0.11")
# bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_go", version = "0.59.0")

# bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    go_mod = "//:go.mod",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
