load("@jvm_image//:jvm_image_layers.bzl", "jvm_image_layers")
load("@rules_java//java:java_binary.bzl", "java_binary")

java_binary(
    name = "hello",
    srcs = ["Main.java"],
    main_class = "example.java.Main",
    deps = [
        "@maven2//:com_google_guava_guava",
    ],
)

jvm_image_layers(
    name = "hello_image",
    binary = ":hello",
    maven_lock_file = "maven2_install.json",
    # max_layers = -1,
)
